--- a/FashionNewsFeed/FashionNewsFeed/Base.lproj/Main.storyboard
+++ b/FashionNewsFeed/FashionNewsFeed/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="w2B-TY-eIG">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="Mark Simonson - Proxima Nova Bold.otf">
@@ -254,6 +255,71 @@
                                     <segue destination="WVd-OM-PCO" kind="show" identifier="moveToContent1" id="En6-Jd-VVc"/>
                                 </connections>
                             </tableViewCell>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="FCCell3" rowHeight="120" id="V5y-z0-qEr" userLabel="FCCellnoimage" customClass="FCTableViewCell3">
+                                <rect key="frame" x="0.0" y="86" width="320" height="360"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="V5y-z0-qEr" id="WsA-gw-hlN">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="360"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9FG-vj-LhJ">
+                                            <rect key="frame" x="8" y="0.0" width="304" height="110"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Кристин Сентенера: всегда" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="288" translatesAutoresizingMaskIntoConstraints="NO" id="Ls0-5g-LGb">
+                                                    <rect key="frame" x="8" y="32" width="288" height="21"/>
+                                                    <fontDescription key="fontDescription" name="ProximaNova-Regular" family="Proxima Nova" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="НОВОСТИ" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JA4-8H-wsq" userLabel="Категория">
+                                                    <rect key="frame" x="8" y="8" width="63" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="0cK-UD-E6I"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="PlayfairDisplay-Bold" family="Playfair Display" pointSize="12"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="вчера" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f7m-pG-EBx" userLabel="Дата">
+                                                    <rect key="frame" x="79" y="8" width="33" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="zUl-P3-qh0"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="PlayfairDisplay-Regular" family="Playfair Display" pointSize="12"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstItem="f7m-pG-EBx" firstAttribute="leading" secondItem="JA4-8H-wsq" secondAttribute="trailing" constant="8" id="6jI-Oo-L03"/>
+                                                <constraint firstItem="Ls0-5g-LGb" firstAttribute="top" secondItem="f7m-pG-EBx" secondAttribute="bottom" constant="4" id="BBz-V8-16N"/>
+                                                <constraint firstItem="Ls0-5g-LGb" firstAttribute="leading" secondItem="9FG-vj-LhJ" secondAttribute="leading" constant="8" id="Clt-jm-n8D"/>
+                                                <constraint firstItem="f7m-pG-EBx" firstAttribute="top" secondItem="9FG-vj-LhJ" secondAttribute="top" constant="8" id="F7z-gB-fkO"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Ls0-5g-LGb" secondAttribute="bottom" constant="57" id="hRH-Am-5vx"/>
+                                                <constraint firstItem="JA4-8H-wsq" firstAttribute="top" secondItem="9FG-vj-LhJ" secondAttribute="top" constant="8" id="hc4-Pq-gEl"/>
+                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="110" id="hl3-Zf-Ldq"/>
+                                                <constraint firstAttribute="trailing" secondItem="Ls0-5g-LGb" secondAttribute="trailing" constant="8" id="it8-jF-eSD"/>
+                                                <constraint firstItem="JA4-8H-wsq" firstAttribute="leading" secondItem="9FG-vj-LhJ" secondAttribute="leading" constant="8" id="kQe-WS-OPy"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstItem="9FG-vj-LhJ" firstAttribute="trailing" secondItem="WsA-gw-hlN" secondAttribute="trailingMargin" id="aUh-0P-xza"/>
+                                        <constraint firstItem="9FG-vj-LhJ" firstAttribute="top" secondItem="WsA-gw-hlN" secondAttribute="topMargin" constant="-8" id="gSy-mm-VZQ"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="9FG-vj-LhJ" secondAttribute="bottom" constant="2" id="s7c-6d-vXv"/>
+                                        <constraint firstItem="9FG-vj-LhJ" firstAttribute="leading" secondItem="WsA-gw-hlN" secondAttribute="leadingMargin" id="y1T-vd-vmf"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="FCCellCategory" destination="JA4-8H-wsq" id="cDV-Jo-AKH"/>
+                                    <outlet property="FCCellDate" destination="f7m-pG-EBx" id="i5u-yi-XNH"/>
+                                    <outlet property="FCCellTitle" destination="Ls0-5g-LGb" id="z2Q-2i-YGU"/>
+                                    <segue destination="WVd-OM-PCO" kind="show" identifier="moveToContent3" id="dQm-FH-z59"/>
+                                </connections>
+                            </tableViewCell>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="FCCell2" rowHeight="260" id="SO9-zi-OMc" userLabel="FCCell1:1.6" customClass="FCTableViewCell2">
                                 <rect key="frame" x="0.0" y="446" width="320" height="250"/>
                                 <autoresizingMask key="autoresizingMask"/>
@@ -328,72 +394,6 @@
                                     <outlet property="FCCellFeaturedImage" destination="lrM-kV-ctn" id="MNg-Vi-aYY"/>
                                     <outlet property="FCCellTitle" destination="jQy-PU-EXB" id="q0v-zP-LnM"/>
                                     <segue destination="WVd-OM-PCO" kind="show" identifier="moveToContent2" id="fja-JX-IAa"/>
-                                </connections>
-                            </tableViewCell>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="FCCell3" rowHeight="120" id="bJW-rY-Vlf" userLabel="FCCellNoImage" customClass="FCTableViewCell3">
-                                <rect key="frame" x="0.0" y="696" width="320" height="250"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bJW-rY-Vlf" id="Q4B-X6-qIz">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="250"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tkQ-EU-seS" customClass="FCTableViewCell3">
-                                            <rect key="frame" x="8" y="0.0" width="304" height="110"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Кристин Сентенера: всегда" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="188" translatesAutoresizingMaskIntoConstraints="NO" id="Ivk-3z-2k7">
-                                                    <rect key="frame" x="8" y="32" width="288" height="19"/>
-                                                    <fontDescription key="fontDescription" name="ProximaNova-Regular" family="Proxima Nova" pointSize="17"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="НОВОСТИ" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tAn-Nb-ep5" userLabel="Категория">
-                                                    <rect key="frame" x="8" y="8" width="63" height="20"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="20" id="30b-ce-4NV"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" name="PlayfairDisplay-Bold" family="Playfair Display" pointSize="12"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="вчера" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1iC-q8-lGl" userLabel="Дата">
-                                                    <rect key="frame" x="79" y="8" width="33" height="20"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="20" id="XaP-aB-PyC"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" name="PlayfairDisplay-Regular" family="Playfair Display" pointSize="12"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="Ivk-3z-2k7" secondAttribute="trailing" constant="8" id="EUN-aa-85z"/>
-                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="110" id="IXh-eU-AaU"/>
-                                                <constraint firstItem="1iC-q8-lGl" firstAttribute="leading" secondItem="tAn-Nb-ep5" secondAttribute="trailing" constant="8" id="Nzi-aE-F3G"/>
-                                                <constraint firstItem="Ivk-3z-2k7" firstAttribute="top" secondItem="1iC-q8-lGl" secondAttribute="bottom" constant="4" id="SL8-wL-nvY"/>
-                                                <constraint firstItem="tAn-Nb-ep5" firstAttribute="top" secondItem="tkQ-EU-seS" secondAttribute="top" constant="8" id="UvH-WP-Xlq"/>
-                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Ivk-3z-2k7" secondAttribute="bottom" constant="59" id="YHB-9l-wbg"/>
-                                                <constraint firstItem="tAn-Nb-ep5" firstAttribute="leading" secondItem="tkQ-EU-seS" secondAttribute="leading" constant="8" id="hsX-oV-DTX"/>
-                                                <constraint firstItem="1iC-q8-lGl" firstAttribute="top" secondItem="tkQ-EU-seS" secondAttribute="top" constant="8" id="lRs-AX-coK"/>
-                                                <constraint firstItem="1iC-q8-lGl" firstAttribute="leading" secondItem="tAn-Nb-ep5" secondAttribute="trailing" constant="8" id="lcU-fc-4BA"/>
-                                                <constraint firstItem="Ivk-3z-2k7" firstAttribute="leading" secondItem="tkQ-EU-seS" secondAttribute="leading" constant="8" id="xNX-0A-FG3"/>
-                                            </constraints>
-                                        </view>
-                                    </subviews>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                    <constraints>
-                                        <constraint firstAttribute="bottom" secondItem="tkQ-EU-seS" secondAttribute="bottom" constant="10" id="RX1-iJ-6mt"/>
-                                        <constraint firstItem="tkQ-EU-seS" firstAttribute="leading" secondItem="Q4B-X6-qIz" secondAttribute="leading" constant="8" id="ckR-X0-o6J"/>
-                                        <constraint firstItem="tkQ-EU-seS" firstAttribute="top" secondItem="Q4B-X6-qIz" secondAttribute="top" id="lvX-GP-4fS"/>
-                                        <constraint firstAttribute="trailing" secondItem="tkQ-EU-seS" secondAttribute="trailing" constant="8" id="wFq-lS-5gX"/>
-                                    </constraints>
-                                </tableViewCellContentView>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <connections>
-                                    <outlet property="FCCellCategory" destination="tAn-Nb-ep5" id="WaQ-Md-F6w"/>
-                                    <outlet property="FCCellDate" destination="1iC-q8-lGl" id="vpY-nS-ewI"/>
-                                    <outlet property="FCCellTitle" destination="Ivk-3z-2k7" id="1HM-Dk-i82"/>
-                                    <segue destination="WVd-OM-PCO" kind="show" identifier="moveToContent3" id="bSE-Us-srP"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="FCCell4" rowHeight="410" id="Q7y-wv-s19" userLabel="FCCell1.6:1" customClass="FCTableViewCell4">
@@ -530,7 +530,7 @@
         <image name="MenuIcon" width="24" height="12"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="TaK-ju-dqY"/>
+        <segue reference="dQm-FH-z59"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 </document>
